[gd_scene load_steps=7 format=2]

[ext_resource path="res://root.gd" type="Script" id=1]
[ext_resource path="res://btn_bkgr.png" type="Texture" id=2]
[ext_resource path="res://coolvetica.ttf" type="DynamicFontData" id=3]
[ext_resource path="res://car_start_001.wav" type="AudioStream" id=4]
[ext_resource path="res://engine.wav" type="AudioStream" id=5]

[sub_resource type="DynamicFont" id=1]

size = 24
use_mipmaps = false
use_filter = false
font_data = ExtResource( 3 )
_sections_unfolded = [ "Font", "Settings" ]

[node name="root" type="Node2D" index="0"]

script = ExtResource( 1 )
__meta__ = {
"_edit_horizontal_guides_": [ 130.0 ],
"_edit_vertical_guides_": [ 80.0, 220.0 ]
}

[node name="start_engine" type="TextureButton" parent="." index="0"]

anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_left = 80.0
margin_top = 130.0
margin_right = 220.0
margin_bottom = 170.0
rect_pivot_offset = Vector2( 0, 0 )
focus_mode = 2
mouse_filter = 0
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 1
toggle_mode = false
enabled_focus_mode = 2
shortcut = null
group = null
_sections_unfolded = [ "Material" ]

[node name="Sprite" type="Sprite" parent="start_engine" index="0"]

scale = Vector2( 2.1875, 0.625 )
texture = ExtResource( 2 )
centered = false
_sections_unfolded = [ "Offset" ]

[node name="Label" type="Label" parent="start_engine" index="1"]

anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_right = 140.0
margin_bottom = 40.0
rect_pivot_offset = Vector2( 0, 0 )
mouse_filter = 2
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 4
custom_fonts/font = SubResource( 1 )
custom_colors/font_color = Color( 0, 0, 0, 1 )
text = "Start Engine"
align = 1
valign = 1
percent_visible = 1.0
lines_skipped = 0
max_lines_visible = -1
_sections_unfolded = [ "Material", "custom_colors", "custom_fonts" ]

[node name="accelerate" type="TextureButton" parent="." index="1"]

anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_left = 330.0
margin_top = 130.0
margin_right = 470.0
margin_bottom = 170.0
rect_pivot_offset = Vector2( 0, 0 )
focus_mode = 2
mouse_filter = 0
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 1
toggle_mode = false
enabled_focus_mode = 2
shortcut = null
group = null
_sections_unfolded = [ "Material" ]
__meta__ = {
"_edit_group_": true
}

[node name="Sprite" type="Sprite" parent="accelerate" index="0"]

scale = Vector2( 2.1875, 0.625 )
texture = ExtResource( 2 )
centered = false
_sections_unfolded = [ "Offset" ]

[node name="Label" type="Label" parent="accelerate" index="1"]

anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_right = 140.0
margin_bottom = 40.0
rect_pivot_offset = Vector2( 0, 0 )
mouse_filter = 2
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 4
custom_fonts/font = SubResource( 1 )
custom_colors/font_color = Color( 0, 0, 0, 1 )
text = "Accelerate"
align = 1
valign = 1
percent_visible = 1.0
lines_skipped = 0
max_lines_visible = -1
_sections_unfolded = [ "Material", "custom_colors", "custom_fonts" ]

[node name="start_engine_snd" type="AudioStreamPlayer2D" parent="." index="2"]

stream = ExtResource( 4 )
volume_db = 0.0
autoplay = false
max_distance = 2000.0
attenuation = 1.0
bus = "Master"
area_mask = 1

[node name="accelerate_snd" type="AudioStreamPlayer2D" parent="." index="3"]

stream = ExtResource( 5 )
volume_db = 0.0
autoplay = false
max_distance = 2000.0
attenuation = 1.0
bus = "Master"
area_mask = 1

[node name="engine_noise_snd" type="AudioStreamPlayer2D" parent="." index="4"]

stream = ExtResource( 5 )
volume_db = 0.0
autoplay = false
max_distance = 2000.0
attenuation = 1.0
bus = "Master"
area_mask = 1

[connection signal="pressed" from="start_engine" to="." method="_on_start_engine_pressed"]

[connection signal="pressed" from="accelerate" to="." method="_on_accelerate_pressed"]


